# Qualcomm-RB3-ROS2

./: .gitignore  README.md  license.txt
scripts/: bootstrap_qirp.sh  git_wrapper.py  init_git_repo.sh  package_for_git.sh  qirp-setup-local.sh  ros2_env_setup.sh
src/ai_inference/: README.md  package.xml  setup.py
src/ai_inference/ai_inference/: __init__.py  yolo_detector.py
src/ai_inference/config/: yolo_config.yaml
src/ai_inference/launch/: yolo_detector_launch.py
src/odom_imu/: README.md  package.xml  setup.py
src/odom_imu/config/: imu_ekf.yaml
src/odom_imu/launch/: imu_ekf_launch.py
src/odom_imu/odom_imu/: imu_ekf_node.py
